<resources>
    <string name="app_name">Кожуховский приют</string>
    <string name="form">form</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="about_text">Друзья, в Кожуховском приюте содержатся тысячи животных. \nМного потеряшек и совсем ручных. \nК сожалению, срок их жизни в муниципальном приюте ограничен. Посмотрите в эти глаза, все хотят хоть немного побыть счастливыми, почувствовать себя любимыми и нужными. \nМы - волонтеры, стараемся делать их ненадолго радостными, но нас так мало, а собак море... \nЕсли вы хотите подарить помощь, своё внимание и ласку кому-то из них, пусть даже ненадолго - сделайте это сегодня! \nПока есть такая возможность, ведь кто знает, что станет с ними завтра...?</string>
    <string name="about_tit">Вы нужны животным</string>
    <string name="get_text1"><b><font size="18">На личном транспорте.</font></b> Координаты места для навигатора: <b>55° 43" 1\' N</b>, <b>37° 55" 39\' E</b>. Расстояние от МКАД около 8 км. Время в пути около 20 мин. без учёта пробок. С МКАД повернуть на развязке \«Косино-Вешняки\» Вам на Косино. На втором светофоре повернуть направо затем сразу налево. Едите прямо по главной дороге до ТБО \«Некрасовка\» (большая куча мусора) через 150-200 метров перед щитом \«ШТАБ СТРОИТЕЛЬСТВА\» повернуть налево, через 700 метров с левой стороны
территория с зеленым забором.</string>
    <string name="get_text2"><b><font size="18">Своим ходом.</font></b> Станция метро Выхино, идете в подземный переход, из перехода налево - к маршрутке <b>718М</b>. Конечная остановка - 9 микрорайон Кожухово, выходим. Далее - ориентир: высокая красно-белая труба за полем. Приют находится по правую руку сразу от трубы. Нужно перейти поле - сначала будет бетонная дорога, она идет налево, где-то метров через 300 надо взять правее - по грунтовой колее и далее просто смотрим на зеленый забор Приюта и ориентируемся и выходим
на него. Идти примерно 15 минут быстрым шагом.</string>
    <string name="info_fr1">Как мне добраться?</string>
    <string name="info_fr2">Чем я могу помочь?</string>
    <string name="help"><b>1. Руками</b> - помощь своим присутствием, выгул, адаптация и социализация собак.</string>
    <string name="help1"><b>2. Вещами</b> - лекарства, игрушки, поводки, ошейники и тд.</string>
    <string name="help2"><b>3. Рекламой</b> - расскажите о приюте друзьям, в соц. сетях, на форумах.</string>
    <string name="help3"><b>4. Морально</b> - волонтеры и работники приюта тоже люди и им тоже нужна поддержка!</string>
    <string name="help4"><b>5. Финансово</b> - деньги очень нужны на повседневные нужды (лечение, передержка и вывоз собак заграницу). Выберите приемлемый для себя вариант помощи:</string>
    <string name="sber"><b>Карта Тинькофф:</b> 5244 6873 7897 3217</string>
    <string name="qiwi"><b>Номер QIWI-кошелька:</b> 968-875-50-65</string>
    <string name="ya"><b>Номер ЯК:</b> 410011096898317</string>
    <string name="site">http://www.vao-priut.org</string>
</resources>
