<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_fr2"
        android:id="@+id/textView4"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:id="@+id/help1"
        android:singleLine="false"
        android:linksClickable="false"
        android:autoText="false"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help1"
        android:id="@+id/help2"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help2"
        android:id="@+id/help3"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help3"
        android:id="@+id/help4"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help4"
        android:id="@+id/help5"
        android:layout_marginLeft="10dp" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qiwi"
            android:src="@drawable/qiwi"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qiwi"
            android:id="@+id/qiwi_text"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/qiwi"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignTop="@+id/qiwi"
            android:layout_alignBottom="@+id/qiwi"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sber"
            android:layout_below="@+id/qiwi"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/tinkov"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sber"
            android:id="@+id/sber_text"
            android:layout_alignTop="@+id/sber"
            android:layout_toRightOf="@+id/sber"
            android:layout_toEndOf="@+id/sber"
            android:layout_alignBottom="@+id/sber"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yandex"
            android:layout_below="@+id/sber"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/yandex" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ya"
            android:id="@+id/ya_text"
            android:layout_alignTop="@+id/yandex"
            android:layout_toRightOf="@+id/yandex"
            android:layout_toEndOf="@+id/yandex"
            android:layout_alignBottom="@+id/yandex"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp" />
    </RelativeLayout>

</LinearLayout>
